Fixed issue with text align on pricing table widget description.

--- a/obfx_modules/elementor-widgets/css/public.css
+++ b/obfx_modules/elementor-widgets/css/public.css
@@ -1,5 +1,5 @@
 /* Pricing Table Base CSS */
-.obfx-pricing-table-wrapper {
+.obfx-pricing-table-wrapper, .obfx-pricing-table-wrapper p.obfx-pricing-table-subtitle {
     text-align: center;
 }
 
